Revision history for STEVEB-Dist-Mgr

1.00 UNREL
        - Fix issue where ABSTRACT was being pulled from one of the test
          modules. We now pull it from the proper POD file (fixes #4)
        - t/20-ci_config_files.t no longer overwrites this distribution's
          production CI config file (fixes #3)
        - Commented out package statement in test module template so it doesn't
          get indexed on the CPAN (fixes #7)
        - Renamed all instances of Acme::STEVEB and Acme-STEVEB with
          Test::Module and Test-Module
        - We now send in all of the proper variables to the module template
          (fixes #11)
        - Renamed _makefile_load() and _module_load() to _makefile_tie() and
          _module_tie(), which are by far more appropriate names
        - CI config now installs ExtUtils::MakeMaker to a recent version,
          fixing an issue where prereqs weren't being installed (fixes #9)
        - Remove container from CI config, as containers only work on ubuntu
          (fixes #10)

0.04    2020-12-23
        - Last test CPAN release
        - Added git_ignore()
        - Added remove_unwanted_files()
        - Added init(), creates the actual distribution directory structure
        - Added support for Coveralls.io test coverage testing for ci_github()

0.03    2020-12-22
        - Test release
        - Added ci_github()
        - Added ci_badges()
        - Added manifest_skip()

0.02    2020-12-22
        - Added add_repository() and add_bugtracker()
        - This is another formatting check on MetaCPAN

0.01    2020-12-22
        - Initial release; Much more to add, just checking POD formatting etc.
