@@ -6,26 +6,30 @@ on:
     branches: [ master ]
   workflow_dispatch:
 jobs:
-  ubuntu:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        perl-version: [ '5.32', '5.30' ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        perl: [ '5.32', '5.24', '5.18', '5.14', '5.10' ]
         include:
-          - perl-version: '5.30'
+          - perl: '5.32'
             os: ubuntu-latest
-            release-test: false
             coverage: true
-    container: perl:${{ matrix.perl-version }}
+    name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - run: cpanm -n --installdeps .
+      - name: Set up perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl }}
       - run: perl -V
+      - run: cpanm ExtUtils::PL2Bat
+      - run: cpanm ExtUtils::MakeMaker
+      - run: cpanm --installdeps .
       - name: Run tests (no coverage)
         if: ${{ !matrix.coverage }}
-        run: prove -l t
+        run: prove -lv t
       - name: Run tests (with coverage)
         if: ${{ matrix.coverage }}
         env:
